--- a/Banner.html
+++ b/Banner.html
@@ -36,9 +36,24 @@
           </h2>
         <ul>
           <li>
+            <div class="espacetitre">
+              <h2>
+                KENYA
+              </h2>
+              <a href="https://twitter.com/__ohf__"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
+            </div>
+            <img src="./img/Bannière/kakashivogueban.jpeg" alt="Kakashi">
             <h2>
-              Kirasayo
+              Kakashi Hatake
             </h2>
+          </li>
+          <li>
+            <div class="espacetitre">
+              <h2>
+                Kirasayo
+              </h2>
+              <a href="https://twitter.com/Kirasayo"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
+            </div>
             <img src="./img/Bannière/Robinbanniere.png" alt="Robin">
             <h2>
               Nico Robin
@@ -72,9 +87,12 @@
             </h2>
           </li>
           <li>
-            <h2>
-              Makii
-            </h2>
+            <div class="espacetitre">
+              <h2>
+                Makii
+              </h2>
+              <a href="https://twitter.com/iciMakii"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
+            </div>
             <img src="./img/Bannière/Narutobanniere.JPG" alt="naruto">
             <h2>
               Naruto Uzumaki
@@ -89,7 +107,7 @@
         <ul>
           <li>
             <h3>ONE PIECE</h3>
-            <p>+18 bannières</p>
+            <p>+4 bannières</p>
             <a href="BannerOP.html">VOIR</a>
           </li>
         <li>
@@ -104,7 +122,7 @@
         </li>
         <li>
           <h3>DRAGONBALL</h3>
-          <p>+4 bannières</p>
+          <p>+2 bannières</p>
           <a href="BannerDB.html">VOIR</a>
         </li>
         <li>
@@ -114,12 +132,12 @@
         </li>
         <li>
           <h3>NARUTO</h3>
-          <p>+6 bannières</p>
+          <p>+4 bannières</p>
           <a href="BannerNaruto.html">VOIR</a>
         </li>
         <li>
           <h3>OTHER</h3>
-          <p>+4 bannières</p>
+          <p>+2 bannières</p>
           <a href="BannerMix.html">VOIR</a>
         </li>
       </ul>
