--- a/DBP.html
+++ b/DBP.html
@@ -252,6 +252,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/Dragonball/goku&chichivogue.jpeg" alt="Goku" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Goku & Chichi</p>
+                    <p>VOGUE</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: CLXMXNT</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Dragonball/piccolo 16.18.43.JPG" alt="Piccolo" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Piccolo</p>
+                    <p>Vent</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Toriyama</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Dragonball/GokuvsROse.jpeg" alt="Goku" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Goku vs Rose</p>
+                    <p>Midnight</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Oxy</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Dragonball/KidBuu.png" alt="Buu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kid Buu</p>
+                    <p>Pink theme</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: DYM</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/Dragonball/Trunks.JPG" alt="Trunks" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Trunks</p>
