--- a/computer.html
+++ b/computer.html
@@ -36,9 +36,24 @@
           </h2>
         <ul>
           <li>
+            <div class="espacetitre">
+              <h2>
+                @jan0sair 
+              </h2>
+              <a href="https://twitter.com/jan0sair"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
+            </div>
+            <img src="./img/PC/itachikisamePC.jpeg" alt="Itachi">
+            <h2>
+              Itachi & Kisame
+            </h2>
+          </li>
+          <li>
+            <div class="espacetitre">
             <h2>
               Ayameduse
             </h2>
+            <a href="https://twitter.com/hayameduse"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
+          </div>
             <img src="./img/PC/izuku&ochaca.jpeg" alt="Ochaca">
             <h2>
               Izuku & Ochaca
@@ -54,18 +69,24 @@
             </h2>
           </li>
           <li>
-            <h2>
-              Makii
-            </h2>
+            <div class="espacetitre">
+              <h2>
+                Makii
+              </h2>
+              <a href="https://twitter.com/iciMakii"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
+            </div>
             <img src="./img/PC/SanjiLuffyZoroPC.JPG" alt="SanjiLuffyZoro">
             <h2>
               Sanji, Luffy & Zoro
             </h2>
           </li>
           <li>
-            <h2>
-              "Itadakimasu !"
-            </h2>
+            <div class="espacetitre">
+              <h2>
+                DYMdraw
+              </h2>
+              <a href="https://twitter.com/DYMdraw"><i class="fas fa-arrow-left fa-0.5x"></i> Discover</a>
+            </div>
             <img src="./img/PC/NarutomcdoPC 17.31.19.JPG" alt="Naruto">
             <h2>
               Naruto Uzumaki
