--- a/index.html
+++ b/index.html
@@ -111,41 +111,41 @@
       </div>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >Ajouts récents - NARUTO/ONE PIECE</h2>
+          <h2 class="title-underline" >#VOGUECHALLENGE</h2>
           <ul class="appreciate-list">
               <li class="appreciate-elem4">
-                  <img src="./img/Naruto/narutostreetstyle.JPG" alt="Naruto" class="appreciate-elem-img">
+                  <img class="vogue" src="./img/DragonBall/goku&chichivogue.jpeg" alt="Goku" class="appreciate-elem-img">
                   <div class="appreciate-elem-text">
-                      <p>Naruto</p>
-                      <p>Streetstyle</p>
+                      <p>Goku & Chichi</p>
+                      <p>VOGUE</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: Froz x DYM</p>
+                      <p>Auteur: CLXMXNT</p>
                   </div>
               </li>
               <li class="appreciate-elem4">
-                <img src="./img/Naruto/Shisui&itachi.JPG" alt="Shisui" class="appreciate-elem-img">
+                <img class="vogue" src="./img/One piece/acevogue.jpeg" alt="Ace" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Shisui & Itachi Uchiwa</p>
-                    <p>Night</p>
+                    <p>Portgas D. Ace</p>
+                    <p>VOGUE</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: Mugiwara_D_amore</p>
+                    <p>Auteur: Hermes</p>
                 </div>
               </li>
               <div class="appreciate-banaccueil">
               <li class="appreciate-elem3">
-              <img class="banniere" src="./img/Bannière/robin&samereban.jpeg" alt="Robin" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/VOGUEkatakuri 12.54.10.JPG" alt="KATAKURI" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Olvia et Robin</p>
+                  <p>Charlotte Katakuri</p>
                   <div class="appreciate-separator"></div>
-                  <p>"Adieu"</p>
+                  <p>VOGUE</p>
               </div>
               </li>
               <li class="appreciate-elem3">
-                <img class="banniere" src="./img/Bannière/RegardShanksban.jpeg" alt="Sanks" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/kakashivogueban.jpeg" alt="kakashi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                  <p>Shanks</p>
+                  <p>Kakashi Hatake</p>
                   <div class="appreciate-separator"></div>
-                  <p>Yeux</p>
+                  <p>VOGUE</p>
                 </div>
               </li>
             </div>
