--- a/HxHP.html
+++ b/HxHP.html
@@ -148,7 +148,7 @@
                     <p>Gon Freecss</p>
                     <p>Choqué de la mort de Kaito</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
+                    <p>Auteur: Gabs</p>
                 </div>
             </li>
             <li class="appreciate-elem">
@@ -200,6 +200,48 @@
                     <p>Costard</p>
                     <div class="appreciate-separator"></div>
                     <p>Auteur: ?</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/HxH/meruel.JPG" alt="Meruem" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Meruem</p>
+                    <p>flow</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Hermès</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/HxH/hisokaminimalist.jpeg" alt="Hisoka" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Hisoka Morow</p>
+                    <p>Minimalist</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @MirozAndDraw</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/HxH/Irumi&Hisoka.jpeg" alt="Hisoka" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Irumi & Hisoka</p>
+                    <p>Tension</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Gabs</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/HxH/kurapikablue.JPG" alt="Kurapika" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kurapika</p>
+                    <p>Judgment chain</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Hermès</p>
                 </div>
             </li>
         </ul>
