--- a/computerMHA.html
+++ b/computerMHA.html
@@ -56,6 +56,28 @@
       </ul>
   </div>
 </section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/BAKUGOPC.jpeg" alt="Bakugo" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Katsuki Bakugo</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Explosion</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/Kaminari&Mineta 17.14.59.jpeg" alt="Kaminari&mineta" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Kaminari & Mineta</p>
+                <div class="appreciate-separator"></div>
+                <p>Chill</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
 <footer>
   <div class="block">
       <h2>SOCIAL</h2>
