--- a/computer.html
+++ b/computer.html
@@ -48,6 +48,15 @@
             </h2>
           </li>
           <li>
+            <h2>
+              ?
+            </h2>
+            <img src="./img/PC/mugiwaralittlePC.png" alt="Mugiwara">
+            <h2>
+              Mugiwara
+            </h2>
+          </li>
+          <li>
             <div class="espacetitre">
             <h2>
               Ayameduse
