--- a/computerOP.html
+++ b/computerOP.html
@@ -37,6 +37,50 @@
 <section id="Appreciate" class="appreciate">
   <div class="container">
       <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/LuffyWANOPC.JPG" alt="LuffyWANO" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Monkey D. Luffy</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Winter Wano</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/mugiwaralittlePC.png" alt="MUgiwara" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Mugiwara</p>
+                <div class="appreciate-separator"></div>
+                <p>Little</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/KatakuriPC.png" alt="Katakuri" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Charlotte Katakuri</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Inspiration Manga</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/UsoppPC.JPG" alt="Usopp" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Usopp</p>
+                <div class="appreciate-separator"></div>
+                <p>SniperKing</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
         <li class="appreciate-elem">
           <img class="fdepc" src="./img/PC/SanjiLuffyZoroPC.JPG" alt="SanjiLUffyZoro" class="appreciate-elem-img">
           <div class="appreciate-elem-text">
@@ -51,28 +95,6 @@
                   <p>Mort Ace</p>
                   <div class="appreciate-separator"></div>
                   <p> dernier instant</p>
-              </div>
-          </li>
-      </ul>
-  </div>
-</section>
-<section id="Appreciate" class="appreciate">
-  <div class="container">
-      <ul class="appreciate-list">
-          <li class="appreciate-elem">
-              <img class="fdepc" src="./img/PC/LuffyWANOPC.JPG" alt="LuffyWANO" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Monkey D. Luffy</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Winter Wano</p>
-              </div>
-          </li>
-          <li class="appreciate-elem">
-              <img class="fdepc" src="./img/PC/UsoppPC.JPG" alt="Usopp" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Usopp</p>
-                  <div class="appreciate-separator"></div>
-                  <p>SniperKing</p>
               </div>
           </li>
       </ul>
