--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   </div>
               </li>
               <li class="appreciate-elem">
-                <img src="./img/inutilise/hxh/kurapikablue.JPG" alt="Kurapika" class="appreciate-elem-img">
+                <img src="./img/HxH/kurapikablue.JPG" alt="Kurapika" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Kurapika Kuruta</p>
                     <p>Judgment chain</p>
