--- a/BannerMHA.html
+++ b/BannerMHA.html
@@ -30,10 +30,10 @@
   <nav>
     <a href="BannerNaruto.html">NARUTO</a>
     <a href="BannerOP.html">ONE PIECE</a>
-    <a  class="active" href="BannerSNK.html">SNK</a>
+    <a href="BannerSNK.html">SNK</a>
     <a href="BannerHxH.html">HxH</a>
     <a href="BannerDN.html">DEATHNOTE</a>
-    <a href="BannerMHA.html">MHA</a>
+    <a class="active" href="BannerMHA.html">MHA</a>
     <a href="BannerDB.html">DB</a>
     <a href="BannerMix.html">OTHER</a>
   </nav>
@@ -41,21 +41,21 @@
   <div class="container">
       <ul class="appreciate-list">
           <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Livaivsbeasttitanbanniere.jpeg" alt="Livai" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Livaï vs Beast titan</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Saison 3 - Tome 20</p>
-              </div>
-          </li>
-          <li class="appreciate-elem">
-            <img class="banniere" src="./img/Bannière/Livaibannerblood.JPG" alt="Livai" class="appreciate-elem-img">
+            <img class="banniere" src="./img/Bannière/miriobantrue.JPG" alt="Mirio" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Livaï</p>
+                <p>Mirio Togata</p>
                 <div class="appreciate-separator"></div>
-                <p>Rage</p>
+                <p>LeMillion</p>
             </div>
         </li>
+        <li class="appreciate-elem">
+          <img class="banniere" src="./img/Bannière/toshinori.jpeg" alt="Toshinori" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Toshinori</p>
+              <div class="appreciate-separator"></div>
+              <p>Red / Blue</p>
+          </div>
+      </li>
       </ul>
   </div>
 </section>
