--- a/NarutoP.html
+++ b/NarutoP.html
@@ -253,6 +253,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/Naruto/kisamerequin.png" alt="Kisame" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kisame Hoshigaki</p>
+                    <p>Suiton</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Makii</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/gaivsmadara.jpeg" alt="Gai" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Gaï Maïto vs Madara Uchiwa</p>
+                    <p>8 portes</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Gabs</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/itachicorbeau.png" alt="itachi" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Itachi Uchiwa</p>
+                    <p>Corbeau</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Makii</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/Naruto/obito3.jpeg" alt="Obito" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Obito Uchiwa</p>
+                  <p>Pluie</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Gabs</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/Naruto/Kakashikatana.png" alt="Kakashi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Kakashi Hatake</p>
