--- a/OnepieceP.html
+++ b/OnepieceP.html
@@ -125,6 +125,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/One piece/AceZOroLuffy.jpeg" alt="Ace" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ace, Zoro & Luffy</p>
+                    <p>FanArt</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Narutovie</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/LawDYM 13.46.20.jpeg" alt="LAw" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Trafalgar D. Law</p>
+                    <p>Ope ope no mi</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Menphis</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/Zoromanga.jpeg" alt="ZOro" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Zoro</p>
+                    <p>Inspiration manga</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @MonkeyKujo</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="tapion" src="./img/One piece/EustassKid.JPG" alt="Kid" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Eustass Kid</p>
+                  <p>Wano Kuni - Chapitre 981</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Oda</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/One piece/Fourreaux Rouges.JPG" alt="9FR" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>9 fourreaux rouges</p>
