--- a/BannerDB.html
+++ b/BannerDB.html
@@ -63,19 +63,19 @@
   <div class="container">
       <ul class="appreciate-list">
           <li class="appreciate-elem">
-            <img class="banniere" src="./img/Bannière/Gohanbanniere.png" alt="Gohan" class="appreciate-elem-img">
+            <img class="banniere" src="./img/Bannière/banvegeta.JPG" alt="vegeta" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Son Gohan</p>
+                <p>Vegeta</p>
                 <div class="appreciate-separator"></div>
-                <p>Kamehameha vs Cell</p>
+                <p>Yellow theme</p>
             </div>
         </li>
         <li class="appreciate-elem">
-          <img class="banniere" src="./img/Bannière/CielVegetaTrunksGokuGOhan.JPG" alt="cieldragonball" class="appreciate-elem-img">
+          <img class="banniere" src="./img/Bannière/GOkuSSJ.jpeg" alt="Goku" class="appreciate-elem-img">
           <div class="appreciate-elem-text">
-              <p>Vegeta,Trunks,Goku & Gohan</p>
+              <p>Goku</p>
               <div class="appreciate-separator"></div>
-              <p>Incrusté dans le ciel</p>
+              <p>SSJ</p>
           </div>
         </li>
       </ul>
@@ -85,19 +85,19 @@
   <div class="container">
       <ul class="appreciate-list">
           <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/Gohanbanniere.png" alt="Gohan" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Son Gohan</p>
+                <div class="appreciate-separator"></div>
+                <p>Kamehameha vs Cell</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
             <img class="banniere" src="./img/Bannière/Goku&Vegetabanniere.png" alt="Goku&Vegeta" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
                 <p>Goku & Vegeta</p>
                 <div class="appreciate-separator"></div>
                 <p>Blue vs Red</p>
-            </div>
-        </li>
-        <li class="appreciate-elem">
-            <img class="banniere" src="./img/Bannière/Vegetabanniere.JPG" alt="Vegeta" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Vegeta</p>
-                <div class="appreciate-separator"></div>
-                <p>Base Form</p>
             </div>
         </li>
       </ul>
