--- a/BannerHxH.html
+++ b/BannerHxH.html
@@ -75,9 +75,31 @@
             <div class="appreciate-elem-text">
                 <p>Kirua, Gon, Léolio & Kurapika</p>
                 <div class="appreciate-separator"></div>
-                <p>dessins 1998</p>
+                <p>Dessins 1998</p>
             </div>
           </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/Gon&Kiruaseparationban 17.55.30.JPG" alt="Gon&Kirua" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Gon & Kirua</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Séparation - Incrusté</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/banhisoka 17.55.30.jpg" alt="Hisoka" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Hisoka</p>
+                <div class="appreciate-separator"></div>
+                <p>Pink theme</p>
+            </div>
+        </li>
         </ul>
     </div>
   </section>
