--- a/BannerOP.html
+++ b/BannerOP.html
@@ -173,6 +173,50 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/violetteban 17.57.17.JPG" alt="Violette" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Violette</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Flamenco</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/hiyoriban 17.57.17.JPG" alt="Hiyori" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Hiyori Kozuki</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Komurasaki</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/otamaban 17.57.17.JPG" alt="Otama" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Otama</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Incrusté noir</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/Voguemerryban.jpeg" alt="VOguemerry" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Vogue merry</p>
+                    <div class="appreciate-separator"></div>
+                    <p>B&W</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
               <img class="banniere" src="./img/Bannière/Robinbanniere.png" alt="Robin" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Nico Robin</p>
