--- a/computerNaruto.html
+++ b/computerNaruto.html
@@ -100,6 +100,28 @@
       </ul>
   </div>
 </section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/GaivsMadaraPC.jpeg" alt="gaivsmadara" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Gai vs Madara</p>
+                  <div class="appreciate-separator"></div>
+                  <p>8e porte. PORTE DE LA MORT</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/jiraya&narutoPC.jpeg" alt="Jiraya" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Jiraya & Naruto</p>
+                <div class="appreciate-separator"></div>
+                <p>Entrainement</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
 <footer>
   <div class="block">
       <h2>SOCIAL</h2>
