--- a/computerOP.html
+++ b/computerOP.html
@@ -100,6 +100,28 @@
       </ul>
   </div>
 </section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+        <li class="appreciate-elem">
+          <img class="fdepc" src="./img/PC/KIDPC.JPG" alt="Kid" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Eustass Kid</p>
+              <div class="appreciate-separator"></div>
+              <p>Wano Kuni</p>
+          </div>
+      </li>
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/ZOrominPC 17.02.55.jpg" alt="Zoro" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Zoro</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Minimalist</p>
+              </div>
+          </li>
+      </ul>
+  </div>
+</section>
 <footer>
   <div class="block">
       <h2>SOCIAL</h2>
